--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           </div>
         </div>
 
-      <img src="https://robertleroy.github.io/crate/svg/river.svg" class="river" type="image/svg+xml !important">
+      <img src="assets/river.svg" class="river" alt="river logo" type="image/svg+xml">
 
       </section>
     </transition>
