--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 	</header>
 
-  <aside ref="aside">
+  <aside ref="aside" v-swipe_left="toggleStates">
     <div class="icon btn closeMenu"
       @click="toggleStates">
       close
@@ -53,7 +53,7 @@
     </div>
   </aside>
 
-	<section ref="guages" class="guages"> 
+<section ref="guages" class="guages" v-swipe_right="toggleStates"> 
     <div class="loader">loading...</div>
     
     <transition name="fade" mode="out-in"> 
@@ -70,7 +70,7 @@
       </div>      
     </div>
   </transition>
-	</section>
+</section>
 
 
   
@@ -163,6 +163,7 @@
   <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
   <script src="https://unpkg.com/vuex@2.0.0"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+<script src="https://hammerjs.github.io/dist/hammer.js"></script>
   <script src="app.js"></script>
   
 </body>
