--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           close
         </div>
       </div>
-
+ 
 
       <div class="graph">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 25">
@@ -108,7 +108,7 @@
 
 
       <div class="row">
-        <time>Updated: &nbsp; {{selectedGuage.dateTime | date("MMM D, Y &nbsp; h:mm a")}}</time>
+        <time>Updated: &#8202; {{selectedGuage.dateTime | date("MMM D, Y &#8202; h:mm a")}}</time>
 
         <div class="flow">
           <small v-if='selectedGuage.value == -999999'>
