--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
   <script src="https://unpkg.com/vuex@2.0.0"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-<script src="https://hammerjs.github.io/dist/hammer.js"></script>
+<script src="hammer.js"></script>
   <script src="app.js"></script>
   
 </body>
