--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 
       <div class="body">
         detail
+      	
+      <div>{{dateNow | date("M/do h:mm aa")}}</div>
+	      
       </div>
     </section>
   </transition>
