--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 <!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> -->
   <script src="hammer.js"></script>
   <script src="store.js"></script>
+  <script src="date.js"></script>
   <script src="index.js"></script>
   
 </body>
