--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 <!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> -->
   <script src="hammer.js"></script>
   <script src="store.js"></script>
+  <script src="directives.js"></script>
   <script src="filters.js"></script>
   <script src="index.js"></script>
   
