--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <script src="https://unpkg.com/vuex@2.0.0"></script>
 <!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> -->
   <script src="hammer.js"></script>
-  <script src="store.js"></script>
+<!--   <script src="store.js"></script> -->
   <script src="directives.js"></script>
   <script src="filters.js"></script>
   <script src="index.js"></script>
