--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <!-- #region HEADER ========== -->
   <header>
     <h4 @click="innerWidth < 800 ? toggleStates() : ''">
-      <!-- {{innerWidth < 423 ?  selectedState.short : selectedState.name}}  -->
-      {{title}}
+      {{innerWidth < 423 ?  selectedState.short : selectedState.name}} 
     </h4>   
 
 
