--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 <!-- app -->
     
     
-
-  <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
+<!--   <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script> -->
   <script src="https://unpkg.com/vuex@2.0.0"></script>
 <!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> -->
   <script src="hammer.js"></script>
