--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       v-swipe:right="toggleDetail">
 
       <div class="header">
-        <h6>Detail</h6>
+        <h6>{{selectedGuage.siteName | titlecase}}</h6>
 
         <div class="icon btn closeDetail"
           @click="toggleDetail">
