--- a/offline.html
+++ b/offline.html
@@ -19,7 +19,7 @@
 			overflow: hidden; 
 			-webkit-tap-highlight-color: transparent;
 
-			background: #f7f7f7 url("salidaKayak2.png") no-repeat center fixed; 
+			background: #f7f7f7 url("img/salidaKayak2.png") no-repeat center fixed; 
 			background-size: cover;
 		}
 
