--- a/index.html
+++ b/index.html
@@ -130,10 +130,9 @@
         <div class="swipeMask" ></div>
 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 25">
-          <time>
-						<div>Updated: {{selectedGuage.dateTime | date(" h:mm aa")}}</div>
-						<div>{{selectedGuage.dateTime | date("ddd MMM d, Y")}}</div>
-					</time>
+          <text x="3.871" y="4.715" font-size="1" stroke-width=".114">
+            loading...
+          </text>
         </svg>
 
         <img :src="'https://waterdata.usgs.gov/nwisweb/graph?agency_cd=USGS&site_no=' + selectedGuage.siteCode + '&parm_cd=00060&period=' +
@@ -141,7 +140,10 @@
       </div>
 
       <div class="row">
-        <time>Updated: {{selectedGuage.dateTime | date("MMM d, Y &#8202; h:mm aa")}}</time>
+        <time>
+          <div>Updated: {{selectedGuage.dateTime | date(" h:mm aa")}}</div>
+          <div>{{selectedGuage.dateTime | date("ddd MMM d, Y")}}</div>
+        </time>
 
         <div class="flow">
           <small v-if='selectedGuage.value == -999999'>
