--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Currentflow</title>
   
   <!-- <link rel="icon" type="image/png" href="favicon.png" /> -->
-  <link rel="stylesheet" href="base.css" type="text/css">
-  <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="stylesheet" href="./css/base.css" type="text/css">
+  <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
   
 <body>
@@ -210,10 +210,10 @@
     
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
   <script src="https://unpkg.com/vuex@2.0.0"></script><script src="hammer.js"></script>
-	<script src="states.js"></script>
-  <script src="directives.js"></script>
-  <script src="filters.js"></script>
-  <script src="index.js"></script>
+  <script src="./js/states.js"></script>
+  <script src="./js/directives.js"></script>
+  <script src="./js/filters.js"></script>
+  <script src="./index.js"></script>
   
 </body>
 </html>
