--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+	<meta name="description" content="Vuejs USGS">
+	<meta name="keywords" content="Vuejs USGS Water Data">
   <meta name="viewport" content="user-scalable=no width=device-width, initial-scale=1.0">
+	
+	<meta name="theme-color" content="#000000"/>
+	<link rel="icon" sizes="512x512" href="./img/icon-512.png">
+	<link rel="apple-touch-icon" href="./img/icon-180.png">
+	<meta name="msapplication-square310x310logo" content="./img/icon-310.png">
+	
   
   <title>Currentflow</title>
   
