--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="icon" sizes="512x512" href="./img/icon-512.png">
 	<link rel="apple-touch-icon" href="./img/icon-180.png">
 	<meta name="msapplication-square310x310logo" content="./img/icon-310.png">
+	<link rel='manifest' href='/manifest.webmanifest'>
 	
   
   <title>Currentflow</title>
