--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
     
     
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
-  <script src="https://unpkg.com/vuex@2.0.0"></script><script src="hammer.js"></script>
+  <script src="https://unpkg.com/vuex@2.0.0"></script>
+	<script src="./js/hammer.js"></script>
   <script src="./js/states.js"></script>
   <script src="./js/directives.js"></script>
   <script src="./js/filters.js"></script>
