--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>Currentflow</title>
   
   <!-- <link rel="icon" type="image/png" href="favicon.png" /> -->
-	<link rel='manifest' href='/manifest.webmanifest'>
+	<link rel="manifest" href="./manifest.webmanifest">
   <link rel="stylesheet" href="./css/base.css" type="text/css">
   <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
