--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="user-scalable=no width=device-width, initial-scale=1.0">
 	
 	<meta name="theme-color" content="#000000"/>
-	<link rel="icon" type="image/png" sizes="96x96" href="./images/icon-96.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="./images/icon-192.png">
+	<link rel="icon" sizes="512x512" href="./images/icon-512.png">
 	<link rel="apple-touch-icon" href="./images/icon-180.png">
 	<meta name="msapplication-square150x150logo" content="./images/icon-150.png">
 	
